# yagna

./: .dockerignore  .env-template  .gitignore  .pre-commit-config.yaml  Cargo.toml  Cross.toml  Dockerfile  Dockerfile_yagna  Dockerfile_yagna_with_provider  README.md  accounts-example.json  asdssdasadsda.txt  build-deb-router.Dockerfile  build-deb.Dockerfile  config-payments.toml  create-deb.Dockerfile  dod.yml  dummy.txt  dump.sh  index.html  index.md  local-build-targz.sh  market-api.yaml  payment-api.yaml  pyproject.toml  release.toml  rr.rs  rust-toolchain.toml  rustfmt.toml  yagna.db
agent/batch-requestor/: Cargo.toml
agent/batch-requestor/examples/: run_tasks.rs
agent/batch-requestor/src/: lib.rs  negotiator.rs  payment_manager.rs
agent/provider/: Cargo.toml  build-run-ya-provider.sh  readme.md  run-ya-provider.sh
agent/provider/examples/: mock_requestor.rs
agent/provider/src/: cert_utils.rs  cli.rs  config.rs  dir.rs  display.rs  events.rs  execution.rs  golem_certificate.rs  hardware.rs  interval.rs  lib.rs  main.rs  node_info.rs  preset_cli.rs  provider_agent.rs  rules.rs  signal.rs  startup_config.rs  task_manager.rs  task_state.rs  tasks.rs  trust.rs  typed_props.rs
agent/provider/test-resources/: example-exeunits.json  example-pattern.json  exeunits.json  test-taskrunner-exeunits.json
agent/provider/tests/: allow_only_negotiator.rs  blacklist_negotiator.rs  keystore_cli.rs  manifest_negotiator.rs  market.rs  restrict_rule_cli.rs  rule_cli.rs  test_provider_market.rs  whitelist_cli.rs
agent/requestor/: Cargo.toml
agent/requestor-sdk/: Cargo.toml
agent/requestor-sdk/examples/: run_tasks.rs  run_vm_task.rs
agent/requestor-sdk/src/: activity.rs  command.rs  lib.rs  market_negotiator.rs  package.rs  payment_manager.rs  requestor.rs
agent/requestor/src/: activity.rs  main.rs  market.rs  payment.rs
core/activity/: Cargo.toml
core/activity/examples/: activity_provider_api.rs  activity_requestor_api.rs  create_dummy_agreement.rs  provider.rs  requestor.rs
core/activity/src/: api.rs  cli.rs  common.rs  db.rs  error.rs  http_proxy.rs  lib.rs  macros.rs  service.rs  timeout.rs  tracker.rs
core/appkey/: .env  Cargo.toml  appkey.sqlite3  build.rs
core/appkey/examples/: appkey_service.rs  service.rs
core/appkey/src/: cli.rs  dao.rs  error.rs  lib.rs  service.rs
core/gftp/: Cargo.toml  readme.md
core/gftp/examples/: gftp-server.rs
core/gftp/src/: bin.rs  gftp.rs  lib.rs  rpc.rs
core/gsb-api/: Cargo.toml
core/gsb-api/src/: api.rs  lib.rs  model.rs  service.rs  services.rs
core/healthcheck/: Cargo.toml
core/healthcheck/src/: lib.rs  service.rs
core/http-proxy/: Cargo.toml
core/http-proxy/src/: lib.rs
core/identity/: Cargo.toml  README.md
core/identity/examples/: app-key-token.rs  appkey_service.rs  id-dao-test.rs
core/identity/src/: autoconf.rs  cli.rs  dao.rs  db.rs  id_key.rs  keystore.rs  lib.rs  service.rs
core/identity/tests/: test_identity_unlock.rs
core/market/: Cargo.toml  readme.md  run-market-tests.sh
core/market-decentralized/: Cargo.toml
core/market-decentralized/examples/: discovery_usage.rs
core/market-decentralized/src/: lib.rs  market.rs
core/market-decentralized/tests/: test_market_initialization.rs  utils.rs
core/market/decentralized/: Cargo.toml  readme.md
core/market/examples/: market-dao-test.rs
core/market/forwarding/: Cargo.toml
core/market/golem-base-sdk/: Cargo.toml
core/market/resolver/: Cargo.toml  LICENSE  README.md
core/market/src/: api.rs  bus.rs  cli.rs  config.rs  dao.rs  db.rs  error.rs  identity.rs  lib.rs  market.rs  matcher.rs  negotiation.rs  protocol.rs  rest_api.rs  service.rs  testing.rs  utils.rs  ya_client.rs
core/market/tests/: test_agreement.rs  test_agreement_cancellation.rs  test_agreement_events.rs  test_agreement_reason.rs  test_agreement_rejection.rs  test_app_session_id.rs  test_cleaner.rs  test_cli_gsb_commands.rs  test_proposal.rs  (+8 more)
core/metrics/: Cargo.toml
core/misc/: Cargo.toml
core/model/: Cargo.toml
core/net/: Cargo.toml
core/net-iroh/: Cargo.toml
core/payment/: Cargo.toml  README.md  erc20.sqlite-shm  erc20.sqlite-wal
core/payment-driver/: Cargo.toml
core/persistence/: .env  Cargo.toml  README.md  yagna.sqlite3
core/sci/: Cargo.toml
core/serv/: Cargo.toml  README.md
core/serv-api/: Cargo.toml
core/serv-api-derive/: Cargo.toml
exe-unit/: Cargo.toml  build.rs  example-exeunits.json
exe-unit/api/: Cargo.toml  README.md
exe-unit/docker-tap/: Dockerfile  README.md  entrypoint.sh
exe-unit/dummy/: Cargo.toml  README.md
exe-unit/examples/: agreement.json  commands-server.json  commands.json  counters.rs  debug-runtime.rs  exe-unit2gsb.rs  gsb-proxy.rs  gsb.rs  http-get-put.rs  local_agreement.json  local_commands.json  metrics.rs  runtime-server.rs  transfer.rs  transfer_abort.rs  transfer_resume.rs  transfer_retry.rs
exe-unit/exe-unit-tools/: Cargo.toml
exe-unit/framework/: Cargo.toml
exe-unit/resources/: exeunits-descriptor.json  local-debug-exeunits-descriptor.json  local-exeunits-descriptor.json
exe-unit/runtime-api/: Cargo.toml  build.rs
exe-unit/src/: acl.rs  agreement.rs  bin.rs  cli.rs  commands.rs  crypto.rs  dns.rs  error.rs  exe_unit.rs  lib.rs  logger.rs  manifest.rs  message.rs  network.rs  notify.rs  output.rs  process.rs  runtime.rs  state.rs
exe-unit/tests/: test_exe_unit_basic.rs  test_progress.rs
exe-unit/tokio-process-ns/: Cargo.toml
exe-unit/wasm-mozjs/: Cargo.toml
exe-unit/wasm-sp/: Cargo.toml
exe-unit/wasm-wt/: Cargo.toml
exe-unit/wasmtime/: Cargo.toml
golem_cli/: Cargo.toml  README.md  build.rs
golem_cli/src/: appkey.rs  banner.txt  command.rs  main.rs  manifest.rs  platform.rs  service.rs  settings.rs  settings_show.rs  setup.rs  status.rs  terminal.rs  utils.rs
goth_tests/: .gitignore  .test_durations  README.md  __init__.py  conftest.py  copy_binaries.sh  goth-config.yml  pyproject.toml
goth_tests/domain/: README.md  __init__.py
goth_tests/e2e/: README.md  __init__.py
goth_tests/helpers/: __init__.py  activity.py  api_events.py  negotiation.py  payment.py  probe.py
(+1586 files in other folders)
