[build-system]
requires = ["maturin>=0.14.10,<0.15"]
build-backend = "maturin"

[project]
name = "golem-node"
version = "0.14.0"
description = "golem-node"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["Golem"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
]
urls = { repository = "https://github.com/golemfactory/yagna" }

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
python-source = "python"
strip = true
