[package]
name = "ya-exe-unit"
version = "0.3.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[lib]
name = "ya_exe_unit"
path = "src/lib.rs"

[[bin]]
name = "exe-unit"
path = "src/bin.rs"

[features]
default = ['compat-deployment']
compat-deployment = []
sgx=['graphene-sgx', 'openssl/vendored', 'reqwest/trust-dns', 'secp256k1/rand', 'ya-client-model/sgx', 'ya-core-model/sgx']

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.22.0"
bytes = "1"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["jobapi2", "processthreadsapi"] }

[dependencies]
ya-agreement-utils = { version = "0.4" }
ya-manifest-utils = { version = "0.2" }
ya-client-model = "0.5"
ya-compile-time-utils = "0.2"
ya-core-model = { version = "^0.8", features = ["activity", "appkey"] }
ya-runtime-api = { version = "0.5", path = "runtime-api", features = ["server"] }
ya-service-bus = "0.6"
ya-transfer = "0.3"
ya-utils-path = "0.1"
ya-utils-networking = { version = "0.2", default-features = false, features = ["dns", "vpn"]}

actix = { version = "0.13", default-features = false }
actix-rt = "2.7"
anyhow = "1.0"
async-trait = "0.1.24"
bytes = "1"
chrono = "0.4"
derivative = "2.1"
derive_more = "0.99"
dotenv = "0.15.0"
flexi_logger = { version = "0.22", features = ["colors"] }
futures = "0.3"
graphene-sgx = { version = "0.3.3", optional = true }
hex = "0.4.2"
ipnet = "2.3"
lazy_static = "1.4.0"
log = "0.4"
openssl = { version = "0.10", optional = true }
rand = "0.6"
regex = "1.5"
reqwest = { version = "0.11", optional = true }
secp256k1 = { version = "0.19", optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
sha3 = "0.8.2"
signal-hook = "0.3"
socket2 = "0.4"
structopt = "0.3"
thiserror = "1.0"
# keep the "rt-multi-thread" feature
tokio = { version = "1", features = ["process", "signal", "time", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7.2", features = ["codec", "net"] }
tokio-stream = "0.1.6"
url = "2.1"
yansi = "0.5.0"

[dev-dependencies]
ya-runtime-api = { version = "0.5", path = "runtime-api", features = ["codec", "server"] }
ya-sb-router = "0.6"

actix-files = "0.6"
actix-web = "4"
env_logger = "0.7"
rustyline = "7.0.0"
sha3 = "0.8.2"
shell-words = "1.0.0"
tempdir = "0.3.7"
